--- a/src/main/resources/player/tmplayer/player.fxml
+++ b/src/main/resources/player/tmplayer/player.fxml
@@ -65,12 +65,11 @@
                         </Menu>
                         <Menu mnemonicParsing="false" text="Option">
                             <items>
-                                <MenuItem mnemonicParsing="false" text="Admin panel" />
-                                <MenuItem fx:id="mv240" mnemonicParsing="false" onAction="#gotoplaylist" text="Mini view 240p" />
-                        <MenuItem fx:id="mv320" mnemonicParsing="false" text="Mini view 320p" />
+                                <MenuItem mnemonicParsing="false" onAction="#gotologin" text="Admin panel" />
+                                <MenuItem fx:id="mv240" mnemonicParsing="false" onAction="#goto240" text="Mini view 240p" />
+                        <MenuItem fx:id="mv320" mnemonicParsing="false" onAction="#goto320" text="Mini view 320p" />
                                 <MenuItem mnemonicParsing="false" onAction="#gotoplaylist" text="Playlist" />
                                 <MenuItem mnemonicParsing="false" text="Secret user" />
-                                <MenuItem mnemonicParsing="false" text="Only video mode" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                                 <MenuItem mnemonicParsing="false" text="After shutdown" />
                                 <MenuItem mnemonicParsing="false" text="After sleep" />
