--- a/src/main/resources/player/tmplayer/MiniView240p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView240p.fxml
@@ -8,16 +8,16 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="240.0" maxWidth="352.0" minHeight="240.0" minWidth="352.0" prefHeight="240.0" prefWidth="352.0" styleClass="playarea" stylesheets="@player.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.player">
+<AnchorPane maxHeight="240.0" maxWidth="352.0" minHeight="240.0" minWidth="352.0" prefHeight="240.0" prefWidth="352.0" styleClass="playarea" stylesheets="@player.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView240p">
    <children>
       <BorderPane prefHeight="240.0" prefWidth="352.0">
          <center>
-            <MediaView fitHeight="50.0" fitWidth="50.0" BorderPane.alignment="CENTER" />
+            <MediaView fx:id="play" fitHeight="50.0" fitWidth="50.0" BorderPane.alignment="CENTER" />
          </center>
          <top>
             <HBox alignment="TOP_RIGHT" prefHeight="42.0" prefWidth="352.0" BorderPane.alignment="CENTER">
                <children>
-                  <JFXButton text="Back to  player" textFill="#0f9d58">
+                  <JFXButton onAction="#gotomain" text="Back to  player" textFill="#0f9d58">
                      <font>
                         <Font size="14.0" />
                      </font>
