--- a/src/main/resources/player/tmplayer/Login.fxml
+++ b/src/main/resources/player/tmplayer/Login.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="550.0" maxWidth="400.0" prefHeight="520.0" prefWidth="400.0" styleClass="playarea" stylesheets="@player.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.Login">
+<AnchorPane maxHeight="550.0" maxWidth="400.0" prefHeight="520.0" prefWidth="400.0" styleClass="playarea" stylesheets="@player.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.Login">
    <children>
       <BorderPane prefHeight="520.0" prefWidth="400.0">
          <center>
@@ -21,8 +18,8 @@
                               <Font size="17.0" />
                            </font>
                         </Label>
-                        <TextField prefHeight="25.0" prefWidth="158.0" />
-                        <Label fx:id="fulltime11" alignment="CENTER" prefHeight="26.0" prefWidth="34.0" text="*" textFill="RED" wrapText="true">
+                        <TextField fx:id="uname" onAction="#clearerror" prefHeight="25.0" prefWidth="158.0" />
+                        <Label fx:id="e_uname" alignment="CENTER" prefHeight="26.0" prefWidth="34.0" text="*" textFill="RED" visible="false" wrapText="true">
                            <font>
                               <Font size="17.0" />
                            </font>
@@ -36,8 +33,8 @@
                               <Font size="17.0" />
                            </font>
                         </Label>
-                        <TextField prefHeight="25.0" prefWidth="158.0" />
-                        <Label fx:id="fulltime111" alignment="CENTER" prefHeight="26.0" prefWidth="34.0" text="*" textFill="RED" wrapText="true">
+                        <PasswordField fx:id="pw" onAction="#clearerror" prefHeight="25.0" prefWidth="158.0" />
+                        <Label fx:id="e_pw" alignment="CENTER" prefHeight="26.0" prefWidth="34.0" text="*" textFill="RED" visible="false" wrapText="true">
                            <font>
                               <Font size="17.0" />
                            </font>
@@ -46,7 +43,7 @@
                   </HBox>
                   <HBox alignment="CENTER" layoutX="2.0" layoutY="150.0" prefHeight="57.0" prefWidth="400.0">
                      <children>
-                        <Label fx:id="fulltime1111" alignment="CENTER" prefHeight="26.0" prefWidth="301.0" text="Username or Password incorrect" textFill="RED" wrapText="true">
+                        <Label fx:id="e_all" alignment="CENTER" prefHeight="26.0" prefWidth="301.0" text="Username or Password incorrect" textFill="RED" visible="false" wrapText="true">
                            <font>
                               <Font size="16.0" />
                            </font>
@@ -70,12 +67,12 @@
          <bottom>
             <HBox alignment="TOP_CENTER" prefHeight="144.0" prefWidth="402.0" BorderPane.alignment="CENTER">
                <children>
-                  <JFXButton prefHeight="38.0" prefWidth="125.0" text="Reset" textFill="#0f9d58">
+                  <JFXButton onAction="#reset" prefHeight="38.0" prefWidth="125.0" text="Reset" textFill="#0f9d58">
                      <font>
                         <Font size="17.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton prefHeight="38.0" prefWidth="128.0" text="Login" textFill="#0f9d58">
+                  <JFXButton onAction="#login" prefHeight="38.0" prefWidth="128.0" text="Login" textFill="#0f9d58">
                      <font>
                         <Font size="17.0" />
                      </font>
