--- a/src/main/resources/player/tmplayer/player.fxml
+++ b/src/main/resources/player/tmplayer/player.fxml
@@ -69,7 +69,7 @@
                                 <MenuItem fx:id="mv240" mnemonicParsing="false" onAction="#goto240" text="Mini view 240p" />
                         <MenuItem fx:id="mv320" mnemonicParsing="false" onAction="#goto320" text="Mini view 320p" />
                                 <MenuItem mnemonicParsing="false" onAction="#gotoplaylist" text="Playlist" />
-                                <MenuItem mnemonicParsing="false" text="Secret user" />
+                                <MenuItem mnemonicParsing="false" text="Get data list" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                                 <MenuItem mnemonicParsing="false" text="After shutdown" />
                                 <MenuItem mnemonicParsing="false" text="After sleep" />
