--- a/src/main/resources/player/tmplayer/MiniView240p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView240p.fxml
@@ -3,35 +3,22 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXSlider?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="240.0" maxWidth="352.0" minHeight="240.0" minWidth="352.0" prefHeight="240.0" prefWidth="352.0" styleClass="playarea" stylesheets="@player.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView240p">
+<AnchorPane maxHeight="240.0" maxWidth="352.0" minHeight="240.0" minWidth="320.0" prefHeight="240.0" prefWidth="352.0" styleClass="playarea" stylesheets="@player.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView240p">
    <children>
-      <BorderPane prefHeight="240.0" prefWidth="352.0">
-         <center>
-            <MediaView fx:id="play" fitHeight="50.0" fitWidth="50.0" BorderPane.alignment="CENTER" />
-         </center>
-         <top>
-            <HBox alignment="TOP_RIGHT" prefHeight="42.0" prefWidth="352.0" BorderPane.alignment="CENTER">
-               <children>
-                  <JFXButton onAction="#gotomain" text="Back to  player" textFill="#0f9d58">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </JFXButton>
-               </children>
-            </HBox>
-         </top>
-         <bottom>
-            <HBox alignment="CENTER" prefHeight="36.0" prefWidth="121.0" BorderPane.alignment="TOP_LEFT">
-               <children>
-                  <JFXSlider fx:id="playbar" prefHeight="14.0" prefWidth="327.0" value="0.1" />
-               </children>
-            </HBox>
-         </bottom>
-      </BorderPane>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <MediaView fx:id="play" fitHeight="50.0" fitWidth="50.0" />
+         </children>
+      </HBox>
+      <JFXButton onAction="#gotomain" text="Back to  player" textFill="#0f9d58" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="5.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </JFXButton>
+      <JFXSlider fx:id="playbar" prefHeight="14.0" prefWidth="327.0" value="0.1" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
    </children>
 </AnchorPane>
